Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-1474

Calling PollerHandle::~PollerHandle() before Poller::wait() causes crash

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • M3
    • M4
    • C++ Broker
    • None

    Description

      This is because DeletionManager::markForDeletion() is called inside a lock before DeletionManager::markAllUnusedInThisThread() creates any thread specific state to attach the deletion to. The result is that markForDeletion ends up deleting the corresponding PollerHandlePrivate which causes a lock assertion.

      Attachments

        Activity

          People

            astitcher Andrew Stitcher
            astitcher Andrew Stitcher
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: