QPID-1474: Changed lock scope for PollerHandle::~PollerHandle Also check state better to make sure the impl can't be deleted more than once in a race

git-svn-id: https://svn.eu.apache.org/repos/asf/incubator/qpid/trunk@718966 13f79535-47bb-0310-9956-ffa450edef68